陀螺仪写到死也没写出来

--- a/Town/Town/Interface/Town/RTownLocationSetTableViewCell.xib
+++ b/Town/Town/Interface/Town/RTownLocationSetTableViewCell.xib
@@ -26,6 +26,8 @@
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="m3W-tI-7rt">
                                 <rect key="frame" x="10" y="10" width="30" height="30"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="30" id="GGv-Es-xL0"/>
                                     <constraint firstAttribute="height" constant="30" id="djQ-Bh-fw5"/>
